--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,13 @@
 	"version": "0.3",
 
 	"browser_action": {
-		"default_icon": "icon.png",
+		"default_icon": "img/icon.png",
 		"default_popup": "popup.html"
 	},
+	"background": {
+		"scripts" : ["js/backgroundScript.js"]
+		},
 	"permissions": [
-		"activeTab"
+		"tabs","<all_urls>"
 	]
 }
